--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "markdown-it-emoji": "^3.0.0",
+        "markdown-it-sub": "^2.0.0",
+        "markdown-it-sup": "^2.0.0",
+        "markdown-it-task-lists": "^2.1.1",
         "nuxt": "^3.13.0",
         "nuxt-storage": "^1.2.2",
         "vue": "latest",
+        "vue-markdown-render": "^2.2.1",
         "vue-router": "latest"
     }
 }
