--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "boardGameMaker",
+    "name": "boardgame-maker",
     "private": true,
     "type": "module",
+    "license": "MIT",
     "scripts": {
         "build": "nuxt build",
         "dev": "nuxt dev",
